client/src/components/app/App.css
:root {
  --accent-color: #3F51B5;
}

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-title {
  font-size: 1.5em;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

/*------------------WISH CSS------------------*/
.content {
  padding-left: 251px;
  padding-top: 65px;
}

.display-flex {
  display: flex;
}

.display-inline {
  display: inline !important;
}

.flex-grow-1 {
  flex-grow: 1;
}

.ml-36 {
  margin-left: 36px;
}

.mr-10 {
  margin-right: 10px !important;
}

.no-a-style {
  color: inherit;
  text-decoration: none;
}

.pb-10 {
  padding-bottom: 10px;
}

.pull-right {
  left: 90%;
  right: auto;
}

.text-align-left {
  text-align: left;
}

.text-align-right {
  text-align: right;
}

.width-100 {
  width: 100%;
}

/*------------------AUTH PAGES------------------*/
.auth-component {
  width: 392px;
  margin: 40px auto;
}

.auth-paper {
  padding: 20px;
}

.auth-paper a {
  text-decoration-line: none;
}

/*------------------NAVIGATION ELEMENTS------------------*/
.list-item span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.sb-active-item span {
  color: var(--accent-color);
}

.side-bar {
  top: 60px !important;
  padding-top: 20px;
  z-index: 1000 !important;
  width: 250px;
}

/*----------------------LIST ITEMS----------------------*/
.item-margin {
  margin: 10px 10px;
}

.item-form {
  position: fixed !important;
  bottom: 0 !important;
  right: 100px !important;
}

.item-form-add-taxes {
  width: 45%;
  margin-left: 20px !important;
}

.item-form-increment {
  width: 45%;
  margin-right: 20px !important;
}

.item-form-paper-body {
  padding: 0 20px 20px 20px;
  width: 400px;
}

.item-form-paper-title {
  padding: 10px 20px 10px 20px;
  background-color: var(--accent-color);
  color: #FFFFFF;
}

.item-form-paper-title svg:hover {
  color: #adafba;
}

.item-form-paper-title-text {
  text-align: left !important;
  flex-grow: 1;
}

.item-form-price {
  width: 45%;
  margin-right: 20px !important;
}

.item-form-saved {
  width: 45%;
  margin-left: 20px !important;
}

.item-form-third-row {
  text-align: left;
}

.list-fab {
  position: fixed !important;
  bottom: 0 !important;
  right: 0 !important;
  margin: 20px !important;
}

td svg {
  color: rgba(0,0,0,0.54);
}

tr td {
  border-bottom: none !important;
}

